java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  #namespace: tender-management-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod   # This tells Cert-Manager to use the ClusterIssuer
    acme.cert-manager.io/http01-ingress-class: "nginx"  # Specifies that Cert-Manager should solve the challenge using the NGINX Ingress Controller

spec:
  ingressClassName: nginx
  rules:
  - host: my-springboot-app.sachinayeshmantha.live
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80

  tls:
  - hosts:
    - my-springboot-app.sachinayeshmantha.live  # The domain for which the certificate will be issued
    secretName: spring-boot-app-tls           # Cert-Manager will create this secret with the TLS certificate
